@@ -22,6 +22,10 @@ describe Wrest::Native::Redirection do
   end
   
   it "should raise a Wrest::Exceptions::AutoRedirectLimitExceeded if there are more redirections than the limit" do
+
+    # For n redirections, there will be n+1 Http requests. The last one being
+    # the request for the actual page.
+
     request_url = 'http://redirect.com'
 
     response = mock(Net::HTTPRedirection)
@@ -29,14 +33,14 @@ describe Wrest::Native::Redirection do
     response.stub!(:message).and_return('')
     response.stub!(:body).and_return('')
     response.should_receive(:[]).with('location').exactly(5).times.and_return(request_url)
-    
+
     http_connection = mock(Net::HTTP)
     http_connection.stub!(:read_timeout=)
     http_connection.should_receive(:request).exactly(5).times.and_return(response)
-    
+
     Net::HTTP.should_receive(:new).exactly(5).times.and_return(http_connection)
 
-    lambda{ request_url.to_uri(:follow_redirects_limit => 5).get }.should raise_error(Wrest::Exceptions::AutoRedirectLimitExceeded)
+    lambda{ request_url.to_uri(:follow_redirects_limit => 4).get }.should raise_error(Wrest::Exceptions::AutoRedirectLimitExceeded)
   end
 
   context "functional", :functional => true do
@@ -48,5 +52,15 @@ describe Wrest::Native::Redirection do
       no_redirect.body.should be_blank
       no_redirect.http_response.code.should == "302"
     end
+
+    it "should obey redirection limits" do
+      after_redirect = "http://localhost:3000/redirect_n_times/4".to_uri(:follow_redirects => true, :follow_redirects_limit => 3)
+      lambda { after_redirect.get }.should raise_exception(Wrest::Exceptions::AutoRedirectLimitExceeded)
+
+      after_redirect = "http://localhost:3000/redirect_n_times/4".to_uri(:follow_redirects => true, :follow_redirects_limit => 4).get
+      after_redirect.body.should_not be_blank
+      after_redirect.http_response.code.should == "200"
+    end
+
   end
 end
