@@ -17,6 +17,7 @@ Features under a numbered section are complete and available in the Wrest gem.
  * Ensure Components::Container is ActiveModel compliant
 
 == Current
+ * GH#59 follow_redirects_limit is off by one
  * GH#24 Add support for xpath based filtering of xml response bodies to the response chain
  * GH#46 Response.deserialise for Json responses
  * GH#52 Wrest console (bin/wrest) fails on 1.9.2
